changed uvi colors in css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,18 @@ button {
     font-size: 20px;
 }
 
+.favorable {
+    background-color: green;
+}
+
+.moderate {
+    background-color: orange;
+}
+
+.severe {
+    background-color: red;
+}
+
 
 #cityname, #date {
     font-weight: bold;
